--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,500;0,6..12,600;1,6..12,400&family=Poppins:wght@400;500;700&display=swap");
 html {
   scroll-behavior: smooth;
 }
@@ -13,13 +14,13 @@ html {
 }
 
 .header-bold {
-  font-size: 48px;
+  font-size: 120px;
   font-weight: 600;
   color: #0F4C75;
 }
 
 .ct-header {
-  font-size: 48px;
+  font-size: 64px;
   font-weight: 500;
 }
 
@@ -49,7 +50,7 @@ html {
 .title {
   font-size: 18px;
   font-weight: 500;
-  color: #A6A6A6;
+  color: #042032;
 }
 
 .mr-bt-8 {
@@ -97,14 +98,147 @@ body {
   scroll-behavior: smooth;
 }
 
+.wrap-bg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .image-bg-home {
-  background-image: url(/img/bg-test.png);
-  /* Full height */
-  height: 33, 333% !important;
-  width: 33, 333% !important;
+  background-image: url(/img/circle.svg);
   background-repeat: no-repeat !important;
-  background-repeat: no-repeat !important;
-  background-position: 100% -6%;
+  background-size: cover !important;
+  background-position: center;
+  width: 50vh;
+  height: 50vh;
+  background-repeat: no-repeat;
+  background-size: auto;
+  animation: loader 24s linear infinite;
+  position: absolute;
+}
+
+.gradient2 {
+  font-size: 18px;
+  font-weight: 500;
+  color: #042032;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.gradient {
+  opacity: 70%;
+  --size: 250px;
+  left: -20%;
+  --speed: 120s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  position: absolute;
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 4));
+  background-image: linear-gradient(hsla(158, 79%, 57%, 0.85), hsl(218, 62%, 55%));
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+}
+
+@media (min-width: 720px) {
+  .gradient {
+    --size: 500px;
+    left: 20%;
+  }
+}
+#mouse-scroll {
+  style: block;
+}
+
+#mouse-scroll {
+  position: absolute;
+  margin-top: 120px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  z-index: 9999;
+}
+
+#mouse-scroll span {
+  display: block;
+  width: 5px;
+  height: 5px;
+  transform: rotate(45deg);
+  transform: rotate(45deg);
+  border-right: 2px solid #0F4C75;
+  border-bottom: 2px solid #0F4C75;
+  margin: 0 0 3px 5px;
+}
+
+#mouse-scroll .mouse {
+  height: 21px;
+  width: 14px;
+  border-radius: 10px;
+  transform: none;
+  border: 2px solid #0F4C75;
+  top: 170px;
+}
+
+#mouse-scroll .down-arrow-1 {
+  margin-top: 6px;
+}
+
+#mouse-scroll .down-arrow-1, #mouse-scroll .down-arrow-2, #mouse-scroll .down-arrow-3 {
+  -webkit-animation: mouse-scroll 1s infinite;
+  -moz-animation: mouse-scroll 1s infinite;
+}
+
+#mouse-croll .down-arrow-1 {
+  -webkit-animation-delay: 0.1s;
+  -moz-animation-delay: 0.1s;
+  -webkit-animation-direction: alternate;
+}
+
+#mouse-scroll .down-arrow-2 {
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  -webkit-animation-direction: alternate;
+}
+
+#mouse-scroll .down-arrow-3 {
+  -webkit-animation-delay: 0.3s;
+  -moz-animation-dekay: 0.3s;
+  -webkit-animation-direction: alternate;
+}
+
+#mouse-scroll .mouse-in {
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: #0F4C75;
+  position: relative;
+}
+
+#mouse-scroll .mouse-in {
+  -webkit-animation: animated-mouse 1.2s ease infinite;
+  moz-animation: mouse-animated 1.2s ease infinite;
+}
+@keyframes mouse-scroll {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/* This is just to transition when you change the viewport size. */
+* {
+  transition: all 0.25s ease-out;
 }
 
 .navbar {
@@ -138,7 +272,6 @@ body {
 .section-1 .title {
   font-size: 18px;
   font-weight: 500;
-  color: #A6A6A6;
 }
 .section-1 .content {
   font-weight: 400;
@@ -222,6 +355,11 @@ body {
   color: #ea4c89;
   background-color: #e6f5ff;
   transform: scale(1.2);
+}
+
+.sc-card {
+  padding-top: 68px;
+  padding-bottom: 24px;
 }
 
 .sc-2 {
@@ -404,35 +542,14 @@ footer.footer-area .widget-about .contact-details li a {
   }
 }
 
-@media only screen and (max-width: 1600px) {
-  .image-bg-home {
-    background-size: 80%;
-    background-position: 100% -5%;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  .image-bg-home {
-    background-size: 75%;
-    background-position: 100% 2%;
-  }
-}
 @media only screen and (max-width: 1024px) {
   .header-bold {
-    font-size: 44px;
+    font-size: 80px;
     font-weight: 600;
     color: #0F4C75;
   }
-  .image-bg-home {
-    background-size: 75%;
-    background-position: 100% 4%;
-  }
 }
 @media only screen and (max-width: 991px) {
-  .image-bg-home {
-    background-image: url(/img/bg-test2.png);
-    background-position: 50% 0%;
-    background-size: 200%;
-  }
   .sc-3 {
     padding: 32px 0 0 0;
   }
@@ -445,11 +562,14 @@ footer.footer-area .widget-about .contact-details li a {
   .btn-link-custom {
     font-size: 14px;
   }
+  #mouse-scroll {
+    margin-top: 40px;
+  }
   .bg-sc1 {
     margin-bottom: 80px;
   }
   .header-bold {
-    font-size: 30px;
+    font-size: 80px;
     font-weight: 600;
     color: #0F4C75;
   }
@@ -462,7 +582,7 @@ footer.footer-area .widget-about .contact-details li a {
   }
   .ct-caption {
     margin-top: 8px;
-    font-size: 10px;
+    font-size: 16px;
     font-weight: 400;
     color: #A6A6A6;
   }
@@ -472,7 +592,6 @@ footer.footer-area .widget-about .contact-details li a {
   .section-1 .title {
     font-size: 16px;
     font-weight: 400;
-    color: #A6A6A6;
   }
   .section-1 .content {
     font-weight: 400;
