--- a/scss/main.css
+++ b/scss/main.css
@@ -17,6 +17,12 @@ html {
   font-size: 120px;
   font-weight: 600;
   color: #0F4C75;
+  outline: none;
+  background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGV4azRzdDV1cXczODZjd3pvZXAwZm5mNGQ5Zm9kdzNibmxpeWlpcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3q3SUqPnxZGQpMNcjc/giphy.gif);
+  background-size: contain;
+  background-position: top left;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .ct-header {
@@ -91,6 +97,14 @@ html {
 
 .br-rad-8 {
   border-radius: 8px;
+}
+
+.bg-port-1:hover {
+  background-color: #EFFFFC;
+}
+
+.bg-port-2:hover {
+  background-color: #FFF2C5;
 }
 
 body {
@@ -362,6 +376,71 @@ body {
   padding-bottom: 24px;
 }
 
+.card {
+  height: 300px;
+  border-radius: 16px;
+  background-color: #fff;
+  border: 1px solid #D9E9F6;
+  transition: transform 0.2s;
+  margin-bottom: 40px;
+}
+
+.link-anim {
+  position: absolute;
+  bottom: 0px;
+  left: 5%;
+  opacity: 0;
+  transition: 0.2s;
+  transform: scale(0);
+  transition-timing-function: ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+  border: unset;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+.card:hover .link-anim {
+  bottom: 20px;
+  left: 5%;
+  transform: scale(1);
+  opacity: 1;
+}
+
+.card-image-1 {
+  background-image: url(/img/meditime1.png);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+.card-image-2 {
+  background-image: url(/img/Perlu.png);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+.card-img-overlay {
+  padding-right: 50%;
+  padding-top: 5%;
+  padding-left: 5%;
+}
+
+.img-thumbnail {
+  background-color: unset;
+  border-color: unset;
+  border: unset;
+  height: 100px;
+}
+
 .sc-2 {
   padding-top: 68px;
   padding-bottom: 100px;
@@ -545,8 +624,6 @@ footer.footer-area .widget-about .contact-details li a {
 @media only screen and (max-width: 1024px) {
   .header-bold {
     font-size: 80px;
-    font-weight: 600;
-    color: #0F4C75;
   }
 }
 @media only screen and (max-width: 991px) {
@@ -570,8 +647,6 @@ footer.footer-area .widget-about .contact-details li a {
   }
   .header-bold {
     font-size: 80px;
-    font-weight: 600;
-    color: #0F4C75;
   }
   .ct {
     font-weight: 500;
@@ -700,6 +775,40 @@ footer.footer-area .widget-about .contact-details li a {
   .sc-2 .link-action:hover {
     transform: scale(1.05);
     margin-left: 12px;
+  }
+  .card {
+    height: 450px;
+  }
+  .link-anim {
+    margin-top: 20px;
+    opacity: 1;
+    transition: 0.5s;
+    transform: unset;
+    transition-timing-function: unset;
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    left: unset;
+  }
+  .card:hover {
+    transform: unset;
+    cursor: pointer;
+  }
+  .card:hover .link-anim {
+    transform: scale(1.2);
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    left: unset;
+  }
+  .card-image {
+    background-position: bottom center;
+  }
+  .img-thumbnail {
+    height: 30%;
+  }
+  .card-img-overlay {
+    padding: 1.25rem;
   }
   .sc-3 {
     padding: 32px 0 0 0;
