--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,6 +74,12 @@ html {
     font-size: $fsz-120;
     font-weight: $fwg-bd;
     color: $primary;
+    outline: none;
+    background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGV4azRzdDV1cXczODZjd3pvZXAwZm5mNGQ5Zm9kdzNibmxpeWlpcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3q3SUqPnxZGQpMNcjc/giphy.gif);
+    background-size: contain;
+    background-position: top left;
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 .ct-header{
@@ -138,6 +144,13 @@ html {
 
 .br-rad-8{
     border-radius: 8px;
+}
+
+.bg-port-1:hover{
+    background-color: #EFFFFC;
+}
+.bg-port-2:hover{
+    background-color: #FFF2C5;
 }
 
 
@@ -415,7 +428,70 @@ body{
     padding-top: 68px;
     padding-bottom: 24px;
 }
+//sc2
+.card{
+    height: 300px;
+    border-radius: 16px;
+    background-color: #fff;
+    border: 1px solid #D9E9F6;
+    transition: transform .2s;
+    margin-bottom: 40px;
 
+}
+.link-anim{
+       position: absolute;
+       bottom: 0px;
+       left: 5%;
+       opacity: 0;
+       transition: 0.2s;
+       transform: scale(0);
+       transition-timing-function: ease-in-out;
+}
+.card:hover{
+    transform: scale(1.02);
+    cursor: pointer;
+    border: unset;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    // .card-image{
+    //     // transform: scale(1.02);
+    //     // margin-bottom: 4px;
+    // }
+    .link-anim{
+        bottom: 20px;
+        left: 5%;
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+.card-image-1{
+    background-image: url(/img/meditime1.png) ;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: contain;
+}
+.card-image-2{
+    background-image: url(/img/Perlu.png) ;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: contain;
+}
+.card-img-overlay{
+    padding-right: 50%;
+    padding-top: 5%;
+    padding-left: 5%;
+}
+.img-thumbnail{
+    background-color: unset;
+    border-color: unset;
+    border: unset;
+    height: 100px;
+}
 .sc-2{
     // background-color: $pm-10;
     padding-top: 68px;
@@ -613,19 +689,13 @@ footer.footer-area{
 @media only screen and (max-width: 1600px){
    
     
-    .image-bg-home{
-        // background-size: 80%;
-        // background-position:100% -5% ;
-    }
+    
     
 
 }
 @media only screen and (max-width: 1200px){
    
-    .image-bg-home{
-        // background-size: 75%;
-        // background-position:100% 2% ;
-    }
+    
     
 
 }
@@ -638,22 +708,13 @@ footer.footer-area{
 
     .header-bold{
         font-size: $fsz-64;
-        font-weight: $fwg-bd;
-        color: $primary;
     }
-    .image-bg-home{
-        // background-size: 75%;
-        // background-position:100% 4% ;
-    }
+    
 
 }
 @media only screen and (max-width: 991px){
    
-    .image-bg-home{
-        // background-image: url(/img/bg-test2.png) ;
-        // background-position:50% 0% ;
-        // background-size: 200%;
-    }
+    
     .sc-3{
         // background-color: #EAF3FC;
         padding: 32px 0 0 0;
@@ -683,8 +744,6 @@ footer.footer-area{
 
     .header-bold{
         font-size: $fsz-64;
-        font-weight: $fwg-bd;
-        color: $primary;
     }
     .ct{
         font-weight: $fwg-med;
@@ -789,6 +848,43 @@ footer.footer-area{
             transform: scale(1.05);
             margin-left: 12px;
         }
+    }
+    .card{
+        height: 450px;
+    }
+    .link-anim{
+        margin-top: 20px; 
+        opacity: 1;
+        transition: 0.5s;
+        transform: unset;
+        transition-timing-function: unset;
+        position: absolute;
+        bottom: 8px;
+        right: 8px;
+        left: unset;
+    }
+    .card:hover{
+        transform: unset;
+        cursor: pointer;
+    
+        
+        .link-anim{
+            transform: scale(1.2);
+            position: absolute;
+            bottom: 8px;
+            right: 8px;
+            left: unset;
+        }
+    }
+    .card-image{
+        background-position: bottom center;
+    }
+    .img-thumbnail{
+        height: 30%;
+    }
+
+    .card-img-overlay{
+        padding: 1.25rem;
     }
 
     .sc-3{
