--- a/scss/main.css
+++ b/scss/main.css
@@ -107,6 +107,14 @@ html {
   background-color: #FFF2C5;
 }
 
+.bg-port-3:hover {
+  background-color: #edfff8;
+}
+
+.bg-port-4:hover {
+  background-color: #edfff8;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
@@ -150,7 +158,7 @@ body {
   opacity: 70%;
   --size: 250px;
   left: -20%;
-  --speed: 120s;
+  --speed: 20s;
   --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
   position: absolute;
   width: var(--size);
@@ -420,6 +428,26 @@ body {
 
 .card-image-2 {
   background-image: url(/img/Perlu.png);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+.card-image-3 {
+  background-image: url(/img/StudyCase/Create-hidden.png);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: contain;
+}
+
+.card-image-4 {
+  background-image: url(/img/StudyCase/nutri.png);
   width: 100%;
   height: 100%;
   margin: 0 auto;
