--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,6 @@ $fwg-bd: 600;
 $fwg-med: 500;
 $fwg-reg: 400;
 
-
 $sp-8: 8px; $sp-16: 16px; $sp-24: 24px; $sp-32: 32px; $sp-64: 64px;
 
 html {
@@ -152,6 +151,12 @@ html {
 .bg-port-2:hover{
     background-color: #FFF2C5;
 }
+.bg-port-3:hover{
+    background-color: #edfff8;
+}
+.bg-port-4:hover{
+    background-color: #edfff8;
+}
 
 
 
@@ -204,7 +209,7 @@ body{
     opacity: 70%;
     --size: 250px;
     left: -20%;
-    --speed: 120s;
+    --speed: 20s;
     --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
     position: absolute;
     width: var(--size);
@@ -474,6 +479,24 @@ body{
 }
 .card-image-2{
     background-image: url(/img/Perlu.png) ;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: contain;
+}
+.card-image-3{
+    background-image: url(/img/StudyCase/Create-hidden.png) ;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: contain;
+}
+.card-image-4{
+    background-image: url(/img/StudyCase/nutri.png) ;
     width: 100%;
     height: 100%;
     margin: 0 auto;
