--- a/scss/casestudy.css
+++ b/scss/casestudy.css
@@ -114,4 +114,8 @@ h5, p {
     background-image: url(/img/StudyCase/create.png);
     background-position: bottom center;
   }
+  .card-image-4 {
+    background-image: url(/img/StudyCase/nutri.png);
+    background-position: bottom center;
+  }
 }/*# sourceMappingURL=casestudy.css.map */
