update remove gif

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,11 +74,11 @@ html {
     font-weight: $fwg-bd;
     color: $primary;
     outline: none;
-    background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGV4azRzdDV1cXczODZjd3pvZXAwZm5mNGQ5Zm9kdzNibmxpeWlpcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3q3SUqPnxZGQpMNcjc/giphy.gif);
+    // background: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGV4azRzdDV1cXczODZjd3pvZXAwZm5mNGQ5Zm9kdzNibmxpeWlpcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3q3SUqPnxZGQpMNcjc/giphy.gif);
     background-size: contain;
     background-position: top left;
     -webkit-background-clip: text;
-    color: transparent;
+    // color: transparent;
 }
 
 .ct-header{
