remove card pointer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -475,7 +475,7 @@ body{
 }
 .card:hover{
     transform: scale(1.02);
-    cursor: pointer;
+    // cursor: pointer;
     border: unset;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     // .card-image{
