--- a/scss/casestudy.scss
+++ b/scss/casestudy.scss
@@ -91,6 +91,21 @@ h5,p{
     border-radius: 0px 0px 8px 8px;
 
 }
+.gx-8{
+    grid-column-gap: 8px;
+}
+.card-pros-hor{
+    padding: 1rem;
+    background-color: #F2F8FC;
+    border-radius: 8px;
+    
+}
+.card-cons-hor{
+    padding: 1rem;
+    background-color: #FCF5F2;
+    border-radius: 8px;
+
+}
 
 @media only screen and (max-width: 1200px){
    .card-image{
