--- a/scss/main.css
+++ b/scss/main.css
@@ -158,6 +158,99 @@ body {
   position: absolute;
 }
 
+.myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.myImg:hover {
+  opacity: 0.7;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 75%;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+.out {
+  animation-name: zoom-out;
+  animation-duration: 0.6s;
+}
+@keyframes zoom {
+  from {
+    transform: scale(0.4);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+@keyframes zoom-out {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0);
+  }
+}
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .gradient2 {
   font-size: 18px;
   font-weight: 500;
@@ -454,7 +547,7 @@ body {
 }
 
 .card-image-3 {
-  background-image: url(/img/StudyCase/Create-hidden.png);
+  background-image: url(/img/StudyCase/create.png);
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -488,7 +581,6 @@ body {
 
 .sc-2 {
   padding-top: 68px;
-  padding-bottom: 100px;
 }
 .sc-2 .title-sc2 {
   margin-bottom: 32px;
@@ -684,6 +776,9 @@ footer.footer-area .widget-about .contact-details li a {
   .btn-link-custom {
     font-size: 14px;
   }
+  .modal-content {
+    width: 100%;
+  }
   #mouse-scroll {
     margin-top: 40px;
   }
@@ -798,7 +893,6 @@ footer.footer-area .widget-about .contact-details li a {
   }
   .sc-2 {
     padding-top: 24px;
-    padding-bottom: 80px;
   }
   .sc-2 .title-sc2 {
     margin-bottom: 8px;
