--- a/scss/main.css
+++ b/scss/main.css
@@ -136,6 +136,12 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.bg-home {
+  background-image: url(/img/Background.svg);
 }
 
 .wrap-bg {
@@ -414,80 +420,101 @@ body {
   line-height: 34px;
 }
 .section-1 .rect-icon-linkedin {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
   margin-left: 0px;
 }
 .section-1 .rect-icon-linkedin:hover {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
   color: #0e76a8;
   background-color: #e6f5ff;
-  transform: scale(1.2);
 }
 .section-1 .rect-icon-wa {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
 }
 .section-1 .rect-icon-wa:hover {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
   color: #128c7e;
   background-color: #e6f5ff;
-  transform: scale(1.2);
 }
 .section-1 .rect-icon-db {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
 }
 .section-1 .rect-icon-db:hover {
-  color: #fff;
-  background-color: #0F4C75;
+  color: #0F4C75;
   border: unset;
-  transition: 0.2s ease-in-out 0s;
-  margin-left: 8px;
-  margin-right: 0px;
+  margin-right: 16px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
+  /* From https://css.glass */
+  background: rgba(233, 246, 255, 0.48);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  border: 1px solid rgba(233, 246, 255, 0.28);
   color: #ea4c89;
   background-color: #e6f5ff;
-  transform: scale(1.2);
 }
 
 .sc-card {
@@ -816,74 +843,48 @@ footer.footer-area .widget-about .contact-details li a {
     line-height: 34px;
   }
   .section-1 .rect-icon-linkedin {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
     margin-left: 0px;
   }
   .section-1 .rect-icon-linkedin:hover {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
     color: #0e76a8;
     background-color: #e6f5ff;
-    transform: scale(1.2);
   }
   .section-1 .rect-icon-wa {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
   }
   .section-1 .rect-icon-wa:hover {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
     color: #128c7e;
     background-color: #e6f5ff;
-    transform: scale(1.2);
   }
   .section-1 .rect-icon-db {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
   }
   .section-1 .rect-icon-db:hover {
-    color: #fff;
-    background-color: #0F4C75;
     border: unset;
-    transition: 0.2s ease-in-out 0s;
-    margin-left: 8px;
-    margin-right: 0px;
+    margin-right: 8px;
     font-size: 24px;
     text-decoration: unset;
     text-decoration: none;
