--- a/scss/main.css
+++ b/scss/main.css
@@ -443,6 +443,8 @@ body {
 .navbar {
   font-size: 1rem;
   font-weight: 500;
+  position: relative;
+  z-index: 10;
 }
 .navbar a {
   color: #666666;
