--- a/scss/main.scss
+++ b/scss/main.scss
@@ -528,7 +528,14 @@ body{
 .navbar{
     font-size: 1rem;
     font-weight: 500;
-    
+    position: relative;
+    z-index: 10;
+    // background: rgba(230, 230, 230, 0.48);
+    // border-radius: 360px;
+    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // backdrop-filter: blur(7px);
+    // -webkit-backdrop-filter: blur(7px);
+    // border: 1px solid rgba(233, 246, 255, 0.28);
     a{
         color: $gray2;
 
