--- a/scss/casestudy.scss
+++ b/scss/casestudy.scss
@@ -1,10 +1,13 @@
 
+$green-1: #1A8887;
+
 h2{
-    color: #4B779D;
+    color: $green-1;
+    font-family: "Sora", sans-serif;
 }
 
 h5,p{
-    color: #333;
+    color: #52595f;
 }
 .text-blue{
     color: #4B779D;
@@ -14,7 +17,7 @@ h5,p{
     background-color: #ffffff;
 }
 .bg-cr-2{
-    background-color: #f8fcff;
+    background-color: #FAFCFB !important;
 }
 .bg-cr-4{
     background-color: #FAFAFA;
@@ -96,9 +99,18 @@ h5,p{
 }
 .card-pros-hor{
     padding: 1rem;
-    background-color: #F2F8FC;
-    border-radius: 8px;
+    background-color: #fff;
+    border: 1px solid #F2F8FC;
+    border-radius: 16px;
     
+}
+.card-red{
+    background-color: #FCF5F2;
+
+}
+.card-green{
+    background-color: #f7fcf2;
+
 }
 .card-cons-hor{
     padding: 1rem;
