update create account

--- a/scss/casestudy.scss
+++ b/scss/casestudy.scss
@@ -19,6 +19,9 @@ h5,p{
 .bg-cr-2{
     background-color: #FAFCFB !important;
 }
+.bg-cr-3{
+    background-color: #eff0f1 !important;
+}
 .bg-cr-4{
     background-color: #FAFAFA;
 }
