--- a/scss/casestudy.css
+++ b/scss/casestudy.css
@@ -19,6 +19,10 @@ h5, p {
   background-color: #FAFCFB !important;
 }
 
+.bg-cr-3 {
+  background-color: #eff0f1 !important;
+}
+
 .bg-cr-4 {
   background-color: #FAFAFA;
 }
