--- a/scss/casestudy.scss
+++ b/scss/casestudy.scss
@@ -6,7 +6,7 @@ h2{
     font-family: "Sora", sans-serif;
 }
 
-h5,p{
+h4,h5,h6,p{
     color: #52595f;
 }
 .text-blue{
@@ -14,7 +14,7 @@ h5,p{
 }
 
 .bg-cr-1{
-    background-color: #ffffff;
+    background-color: #ffffff !important;
 }
 .bg-cr-2{
     background-color: #FAFCFB !important;
