--- a/scss/casestudy.css
+++ b/scss/casestudy.css
@@ -27,6 +27,10 @@ h4, h5, h6, p {
   background-color: #FAFAFA;
 }
 
+li {
+  margin-bottom: 0.3rem;
+}
+
 .card {
   height: 450px;
   border-radius: 16px;
