--- a/scss/main.scss
+++ b/scss/main.scss
@@ -808,7 +808,7 @@ body{
 footer.footer-area{
     background-color: $pm-10;
     border-top: 1px solid $wh-col;
-    // margin-top: 64px;
+    margin-top: 120px;
     ul {
         padding:0;
         margin:0
