update the hero and adding the visual exploration

--- a/scss/main.css
+++ b/scss/main.css
@@ -164,6 +164,19 @@ html {
   background-color: #edfff8;
 }
 
+.surface-white {
+  background-color: #fff;
+}
+
+.box-shd {
+  /* https://smoothshadows.com/#djEsMSwzLDAuMDUsMTAxLC0yLDAsIzAzMDcxMiwjZjNmNGY2LCNmZmZmZmYsMg%3D%3D */
+  box-shadow: 0px 0px 11px rgba(3, 7, 18, 0.02), 0px -1px 45px rgba(3, 7, 18, 0.03), 0px -2px 101px rgba(3, 7, 18, 0.05);
+}
+
+.clr-g-80 {
+  color: #4f4f4f;
+}
+
 .clr-red {
   color: #db4e6a;
 }
@@ -224,6 +237,22 @@ body {
     filter: blur(5px);
   }
 }
+.sticky-sc {
+  position: sticky;
+  top: -40vh;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 0;
+  background-color: #f0f0f0;
+}
+
+.overlap-content {
+  position: relative;
+  z-index: 1;
+  margin-top: 10vh; /* This will push the main content below the hero */
+}
+
 .bg-overlay {
   position: absolute;
   top: 0;
@@ -738,7 +767,9 @@ body {
 }
 
 .sc-3 {
-  background-color: #DFFFDE;
+  background: rgba(255, 255, 255, 0.4); /* Transparansi putih */
+  backdrop-filter: blur(10px); /* Efek blur */
+  -webkit-backdrop-filter: blur(10px); /* Untuk kompatibilitas dengan Safari */
   padding: 64px 0 0 0;
 }
 
@@ -760,7 +791,8 @@ body {
 footer.footer-area {
   background-color: #EEF0F1;
   border-top: 1px solid #fff;
-  margin-top: 120px;
+  position: relative;
+  z-index: 1;
 }
 footer.footer-area ul {
   padding: 0;
@@ -906,7 +938,7 @@ footer.footer-area .widget-about .contact-details li a {
 }
 @media (max-width: 767.98px) {
   .btn-link-custom {
-    font-size: 28px;
+    font-size: 16px;
   }
   .modal-content {
     width: 100%;
